--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -86,4 +86,9 @@ main section.products-show {
   }
 }
 
+.link {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
