--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h2 class="jumbotron">My Dashboard</h2>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Number of products:</h3>
+  </div>
+  <div class="panel-body link">
+    <%= @products_count %>
+    <%= link_to "See all products", products_url, class: 'btn btn-sm btn-primary' %>
+  </div>
+</div>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Number of categories:</h3>
+  </div>
+  <div class="panel-body link">
+    <%= @categories_count %>
+    <%= link_to "See all categories", '/categories/1', class: 'btn btn-sm btn-primary' %>
+  </div>
+</div>
+
