Add dynamic links for categories in admin dashboard

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -90,5 +90,11 @@ main section.products-show {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  row-gap: 5px;
 }
 
+.title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
