--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,3 +1,3 @@
 <h1>About Us</h1>
-<p>This is the About Us page.</p>
+<p>This is the <b>About Us</b> page.</p>
 <img src='https://media.giphy.com/media/slVWEctHZKvWU/giphy.gif'>
