--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -14,7 +14,8 @@
       <thead>
         <tr>
           <th colspan="2">Category</th>
-        </tr>
+          <th colspan="1">Number of Products</th>
+        </tr>        
       </thead>
       <tbody>
         <%= render @categories %>
