--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -48,7 +48,7 @@
           <% end %>
         </li>
         <% if current_user %>
-          <li class="navbar-text">Signed in as <%= current_user.name %></li>
+          <li class="navbar-text">Signed in as <%= current_user.first_name %></li>
           <li><%= link_to "Logout", '/logout' %></li>
         <% else %>
           <li><%= link_to 'Login', '/login' %></li>
